# BoomEngine

./: .gitignore  CMakeLists.txt  README.md
bm-core/: CMakeLists.txt
bm-core/include/BMEngine/: Game.h  GameObject.h  GameObjectComponent.h  GameSystem.h  GridRenderer.h  MeshRenderer.h  ModelRenderer.h  Renderer.h  RenderingSystem.h  ResourcesSystem.h  Scene.h  SceneSystem.h
bm-core/src/: Game.cpp  GameObject.cpp  GridRenderer.cpp  MeshRenderer.cpp  ModelRenderer.cpp  RenderingSystem.cpp  ResourcesSystem.cpp  Scene.cpp  SceneSystem.cpp
bm-sample/: CMakeLists.txt
bm-sample/src/: main.cpp
scripts/: build-macos.sh  build-wasm.sh
